--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.15.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -25,7 +26,7 @@
     "react-error-boundary": "^4.0.13",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.2",
-    "react-i18next": "^14.1.0",
+    "react-i18next": "^12.3.1",
     "react-icons": "^5.0.1",
     "react-pin-input": "^1.3.1",
     "react-redux": "^9.1.0",
@@ -36,6 +37,7 @@
     "react-tooltip": "^5.26.3",
     "react-window": "^1.8.10",
     "tailwind-merge": "^2.2.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
